test/parse/expr/bad-load-align.txt
;;; ERROR: 1
(module (func (i32.load align=foo (i32.const 0))))
(;; STDERR ;;;
out/test/parse/expr/bad-load-align.txt:2:25: error: unexpected token "align=foo"
(module (func (i32.load align=foo (i32.const 0))))
                        ^^^^^^^^^
;;; STDERR ;;)
